Added Github and Linkedin

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
 
   <!-- ────────────────── FOOTER ────────────────── -->
   <footer class="bg-slate-800 text-slate-200 text-center text-sm py-4 mt-20">
-    Built by Kavish Nayeem &nbsp;|&nbsp; Last updated Jul 2025
+    Built by Kavish Nayeem &nbsp;|&nbsp; Last updated Jul 2025 &nbsp;|&nbsp; <a href="https://github.com/kavishnayeem" class="text-slate-400 hover:text-slate-300">GitHub</a> &nbsp;|&nbsp; <a href="https://linkedin.com/in/kavishnayeem" class="text-slate-400 hover:text-slate-300">LinkedIn</a>
   </footer>
 </body>
 </html>
